
"""

NOT-TODO-YET(tiago): replace dicts.Enumeration by python Enum (but as it is not supported in python 2.6 we will wait to next OS upgrade)
NOTE: Some bugs where found in new multi-host capablities of tango.* methods; I did some patches but play with care.
ONGOING: dicts: implement DictFile regexp alternative to CSVArray (to be used to import/export web reports)

October 2014 - 11.1
-------------------------------------------------

dicts: fixed bug when keys are QStrings instead of python strings
arrays: bug in calcullating range from float instead of int
dynamic: DynamicDS devices capable of use init() to reload dynamic attributes
log: bugs in logging when using last pytango releases
servers: ComposersDict updated to PyTango>8
device: Dev4Tango polling thread exception replaced by error message


July 2014 - 11.00, needed by PyTangoArchiving 5.0
-------------------------------------------------
db: enabled tuples and dictionaries as row types on returned queries; bug solved in Select()
threads: Added SubProcess method to execute DB queries in a background process with timeout
tango: get_matching_devices; set fullname=False due to several bugs found in beamlines ... waiting for more conflicts to appear
tango: get_matching_devices(fullname=False) by default #It solved the bugs in Vacca 
interface: added getDeviceClassObjects and addAllClasses methods to append dynamically new classes to servers\
arrays: tested and documented decimation methods, filter_array is the best of them
arrays: filter_array, improved comparison methods
functional: str2time: solved bug in RAW_TIME regexp
functional: added str2bool and str2type (any) methods, added minutes as time units in str2time
objects: added Decorator and BoundDecorator classes to manage class-bound decoration
objects: Added items() method to Struct objects
qt: Added getQt, QConfirmAction decorator, DialogCloser connector and QTextBuffer widget for logging
qt: Solved bugs in QDialogWidget, added Ok/Cancel buttons