@@ -167,7 +167,7 @@ class DynamicDS(PyTango.Device_4Impl,Logger):
             for prop,value in d.items():
                 if not hasattr(self,prop): 
                     setattr(self,prop,(value[-1] if 'Array' in str(value[0]) else 
-                        (value[-1][0] if fun.isSequence(value[-1]) else value[-1]))
+                        (value[-1][0] if (value and fun.isSequence(value[-1])) else value and value[-1]))
                         )
         print 'UseTaurus = %s'%getattr(self,'UseTaurus',False)
         if getattr(self,'UseTaurus',False): self.UseTaurus = bool(tango.loadTaurus())
@@ -344,6 +344,8 @@ class DynamicDS(PyTango.Device_4Impl,Logger):
             [self.info('\t'+self.get_name()+'.'+str(p)+'='+str(getattr(self,p,None))) for p in config]
         if self.UseTaurus:
             self.UseTaurus = (tango.TAU or tango.loadTaurus()) and self.UseTaurus
+        if self.LoadFromFile:
+            self.load_from_file()
         return
         
     def get_device_property(self,property,update=False):
@@ -353,8 +355,9 @@ class DynamicDS(PyTango.Device_4Impl,Logger):
         return value[0] if fandango.isSequence(value) and len(value)==1 else value
         
     def open_file(self,filename):
+        self.info('DynamicDS(%s).open_file(%s)'%(self.get_name(),filename))
         try:
-            if not hasattr(self,'PATH'): self.PATH = self.get_device_property(self,'PATH') or ''
+            if not hasattr(self,'PATH'): self.PATH = self.get_device_property('PATH') or ''
             if self.PATH: filename = self.PATH+'/'+filename
             f = open(filename)
             r = f.readlines()
@@ -363,6 +366,15 @@ class DynamicDS(PyTango.Device_4Impl,Logger):
         except:
             print traceback.format_exc()
             return []
+            
+    def load_from_file(self,filename=None):
+        """ This line is put in a separate method to allow subclasses to override this behavior"""
+        filename = None or self.LoadFromFile
+        data = self.open_file(filename) if filename.lower().strip() not in ('no','false','') else []
+        if data:
+            self.DynamicAttributes = list(data)+list(self.DynamicAttributes)
+        return data
+        
             
     def get_polled_attrs(self,load=False):
         #@TODO: Tango8 has its own get_polled_attr method; check for incompatibilities
@@ -1340,9 +1352,11 @@ class DynamicDS(PyTango.Device_4Impl,Logger):
     #------------------------------------------------------------------
     #Methods started with underscore could be inherited by child device servers for debugging purposes
     def evaluateFormula(self,argin):
+        t0 = time.time()
         print '\tevaluateFormula(%s)'%argin
         e = self.evalState(str(argin))
         argout=str(e)
+        print '\tevaluateFormula took %s seconds'%(time.time()-t0)
         return argout
     
     #------------------------------------------------------------------
@@ -1461,6 +1475,10 @@ class DynamicDSClass(PyTango.DeviceClass):
             [PyTango.DevVarStringArray,
             "Each line generated by this property code will be added to status",
             [] ],
+        'LoadFromFile':
+            [PyTango.DevString,
+            "If not empty, a file where additional attribute formulas can be declared. It will be parsed BEFORE DynamicAttributes",
+            ['no'] ],
         'KeepAttributes':
             [PyTango.DevVarStringArray,
             "This property can be used to store the values of only needed attributes; values are 'yes', 'no' or a list of attribute names",
